feat: 🎸 add secrets entity
